# auto-research-report-generation

./: .gitignore  Dockerfile  Dockerfile.jenkins  build-and-push-docker-image.sh  get_lib_versions.py  jenkinsfile  main.py  pyproject.toml  requirements.txt
notebook/: test.ipynb
research_and_analyst/api/: main.py
research_and_analyst/api/routes/: report_routes.py
research_and_analyst/api/services/: report_service.py
research_and_analyst/backend_server/: models.py  workflow.py
research_and_analyst/config/: configuration.yaml
research_and_analyst/database/: db_config.py
research_and_analyst/logger/: __init__.py
research_and_analyst/notebook/: test.ipynb  test.py
research_and_analyst/utils/: model_loader.py
research_and_analyst/workflows/: interview_workflow.py  report_generator_workflow.py
