[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-research-report-generation"
version = "0.1.0"
description = "Automated research report generation using LLMs"
readme = "README.md"
requires-python = ">=3.11"
license = "LicenseRef-Proprietary"  # ✅ SPDX-compliant
authors = [{ name = "klangat" }]
dependencies = [
    "aiofiles>=25.1.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.120.1",
    "httpx>=0.28.1",
    "ipykernel>=6.30.1",
    "jinja2>=3.1.6",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.78",
    "langchain-google-genai==2.1.8",
    "langchain-groq==0.3.6",
    "langchain-openai==0.3.32",
    "langgraph>=0.6.8",
    "passlib>=1.7.4",
    "python-docx>=1.2.0",
    "reportlab>=4.4.4",
    "sqlalchemy>=2.0.44",
    "structlog>=25.4.0",
    "tavily-python>=0.7.12",
    "uvicorn>=0.38.0",
    "wikipedia>=1.4.0",
]

[tool.setuptools.packages.find]
include = ["research_and_analyst"]
